[gd_scene load_steps=52 format=3 uid="uid://ch0qut00fkqe5"]

[ext_resource type="Texture2D" uid="uid://1sptilylc7dx" path="res://assets/character/Individual Sprites/adventurer-idle-2-00.png" id="1_3s3pu"]
[ext_resource type="Script" path="res://Character.gd" id="1_c1glt"]
[ext_resource type="Texture2D" uid="uid://dqk4kec3s58ks" path="res://assets/character/Individual Sprites/adventurer-idle-2-01.png" id="2_3tkd6"]
[ext_resource type="Texture2D" uid="uid://b363yy3obu43m" path="res://assets/character/Individual Sprites/adventurer-die-00.png" id="2_3uxma"]
[ext_resource type="Texture2D" uid="uid://cj8k1i84sh8b3" path="res://assets/character/Individual Sprites/adventurer-attack1-00.png" id="2_wsvg2"]
[ext_resource type="Texture2D" uid="uid://d1s0tiv0goude" path="res://assets/character/Individual Sprites/adventurer-idle-2-02.png" id="3_2wlot"]
[ext_resource type="Texture2D" uid="uid://ykg6pjhr4tbm" path="res://assets/character/Individual Sprites/adventurer-die-01.png" id="3_uavbk"]
[ext_resource type="Texture2D" uid="uid://dlvybfe7eaeaf" path="res://assets/character/Individual Sprites/adventurer-attack1-01.png" id="3_wcqbh"]
[ext_resource type="Texture2D" uid="uid://b2o1g3vicogi8" path="res://assets/character/Individual Sprites/adventurer-idle-2-03.png" id="4_ddqeu"]
[ext_resource type="Texture2D" uid="uid://blsgn50yp41f" path="res://assets/character/Individual Sprites/adventurer-die-02.png" id="4_de10w"]
[ext_resource type="Texture2D" uid="uid://n2mja2d776n6" path="res://assets/character/Individual Sprites/adventurer-attack1-02.png" id="4_sgc0k"]
[ext_resource type="Texture2D" uid="uid://clykv7p511v4c" path="res://assets/character/Individual Sprites/adventurer-die-03.png" id="5_blcbd"]
[ext_resource type="Texture2D" uid="uid://bfb7v00aumlix" path="res://assets/character/Individual Sprites/adventurer-attack1-03.png" id="5_c0c1x"]
[ext_resource type="Texture2D" uid="uid://dt02ta3ej62uq" path="res://assets/character/Individual Sprites/adventurer-jump-00.png" id="5_x2b25"]
[ext_resource type="Texture2D" uid="uid://delm4l0kktdg2" path="res://assets/character/Individual Sprites/adventurer-attack1-04.png" id="6_2svkm"]
[ext_resource type="Texture2D" uid="uid://debqt2li0bp14" path="res://assets/character/Individual Sprites/adventurer-jump-01.png" id="6_36uh8"]
[ext_resource type="Texture2D" uid="uid://qlxibmsqcmkg" path="res://assets/character/Individual Sprites/adventurer-die-04.png" id="6_pn1pn"]
[ext_resource type="Texture2D" uid="uid://dfcgwsptx8w3" path="res://assets/character/Individual Sprites/adventurer-die-05.png" id="7_2dcv7"]
[ext_resource type="Texture2D" uid="uid://bny4rgghty166" path="res://assets/character/Individual Sprites/adventurer-attack2-00.png" id="7_8j1ip"]
[ext_resource type="Texture2D" uid="uid://cp8b0gfl8h5jo" path="res://assets/character/Individual Sprites/adventurer-jump-02.png" id="7_ujl5a"]
[ext_resource type="Texture2D" uid="uid://5ix37i2jnq7x" path="res://assets/character/Individual Sprites/adventurer-jump-03.png" id="8_obo03"]
[ext_resource type="Texture2D" uid="uid://7phaey7e2eoh" path="res://assets/character/Individual Sprites/adventurer-attack2-01.png" id="8_rx802"]
[ext_resource type="Texture2D" uid="uid://cspq8tj626new" path="res://assets/character/Individual Sprites/adventurer-die-06.png" id="8_sbbub"]
[ext_resource type="Texture2D" uid="uid://bilvk1ut5pjow" path="res://assets/character/Individual Sprites/adventurer-hurt-00.png" id="9_48wyr"]
[ext_resource type="Texture2D" uid="uid://ddqs65njm7hug" path="res://assets/character/Individual Sprites/adventurer-attack2-02.png" id="9_73ljr"]
[ext_resource type="Texture2D" uid="uid://nfgjtme7ics3" path="res://assets/character/Individual Sprites/adventurer-fall-00.png" id="9_bh22j"]
[ext_resource type="Texture2D" uid="uid://co22pw1dbuqw8" path="res://assets/character/Individual Sprites/adventurer-run-00.png" id="9_svpri"]
[ext_resource type="Texture2D" uid="uid://crua54e63ken4" path="res://assets/character/Individual Sprites/adventurer-fall-01.png" id="10_c6kjw"]
[ext_resource type="Texture2D" uid="uid://dsk1gqu000ati" path="res://assets/character/Individual Sprites/adventurer-attack2-03.png" id="10_jixiu"]
[ext_resource type="Texture2D" uid="uid://bls6h0h7gokaa" path="res://assets/character/Individual Sprites/adventurer-run-01.png" id="10_r0sa8"]
[ext_resource type="Texture2D" uid="uid://bckg867k6jlrk" path="res://assets/character/Individual Sprites/adventurer-hurt-01.png" id="10_sl7s1"]
[ext_resource type="Texture2D" uid="uid://b7xhbhw8mck54" path="res://assets/character/Individual Sprites/adventurer-run-02.png" id="11_4es11"]
[ext_resource type="Texture2D" uid="uid://curkh0doxhivl" path="res://assets/character/Individual Sprites/adventurer-attack2-04.png" id="11_85sv8"]
[ext_resource type="Texture2D" uid="uid://bswpvnqsx2gnq" path="res://assets/character/Individual Sprites/adventurer-hurt-02.png" id="11_b4rkc"]
[ext_resource type="Texture2D" uid="uid://dvuv1hw0q6a2l" path="res://assets/character/Individual Sprites/adventurer-run-03.png" id="12_1e83f"]
[ext_resource type="Texture2D" uid="uid://txm3w6dkl15g" path="res://assets/character/Individual Sprites/adventurer-attack2-05.png" id="12_m4h2f"]
[ext_resource type="Texture2D" uid="uid://dvdrjymmr2wmb" path="res://assets/character/Individual Sprites/adventurer-attack3-00.png" id="13_cn4s7"]
[ext_resource type="Texture2D" uid="uid://1twlc13r6xvx" path="res://assets/character/Individual Sprites/adventurer-run-04.png" id="13_gro2b"]
[ext_resource type="Texture2D" uid="uid://c55iagvuykyqq" path="res://assets/character/Individual Sprites/adventurer-attack3-01.png" id="14_jgwa5"]
[ext_resource type="Texture2D" uid="uid://e4elfr7dj7wl" path="res://assets/character/Individual Sprites/adventurer-run-05.png" id="14_nihew"]
[ext_resource type="Texture2D" uid="uid://b41jc4pby0lj4" path="res://assets/character/Individual Sprites/adventurer-attack3-02.png" id="15_je5sl"]
[ext_resource type="Texture2D" uid="uid://cgoufeesxj4g3" path="res://assets/character/Individual Sprites/adventurer-attack3-03.png" id="16_rkwhv"]
[ext_resource type="Texture2D" uid="uid://de3wg7328j1m7" path="res://assets/character/Individual Sprites/adventurer-attack3-04.png" id="17_cgiei"]
[ext_resource type="Texture2D" uid="uid://b1kyw0uuaspke" path="res://assets/character/Individual Sprites/adventurer-attack3-05.png" id="18_vwnhj"]
[ext_resource type="Texture2D" uid="uid://bfwbncvlu04ee" path="res://assets/character/Individual Sprites/adventurer-crouch-00.png" id="19_5dof7"]
[ext_resource type="Texture2D" uid="uid://hx5qmyiis6h" path="res://assets/character/Individual Sprites/adventurer-crouch-01.png" id="20_lakhe"]
[ext_resource type="Texture2D" uid="uid://bsx4meba5r3bm" path="res://assets/character/Individual Sprites/adventurer-crouch-02.png" id="21_5mwa4"]
[ext_resource type="Texture2D" uid="uid://c5fe4hx0l2ya1" path="res://assets/character/Individual Sprites/adventurer-crouch-03.png" id="22_u7xbo"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6yv6x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wsvg2")
}, {
"duration": 1.0,
"texture": ExtResource("3_wcqbh")
}, {
"duration": 1.0,
"texture": ExtResource("4_sgc0k")
}, {
"duration": 1.0,
"texture": ExtResource("5_c0c1x")
}, {
"duration": 1.0,
"texture": ExtResource("6_2svkm")
}],
"loop": false,
"name": &"Attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_8j1ip")
}, {
"duration": 1.0,
"texture": ExtResource("8_rx802")
}, {
"duration": 1.0,
"texture": ExtResource("9_73ljr")
}, {
"duration": 1.0,
"texture": ExtResource("10_jixiu")
}, {
"duration": 1.0,
"texture": ExtResource("11_85sv8")
}, {
"duration": 1.0,
"texture": ExtResource("12_m4h2f")
}],
"loop": false,
"name": &"Attack2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_cn4s7")
}, {
"duration": 1.0,
"texture": ExtResource("14_jgwa5")
}, {
"duration": 1.0,
"texture": ExtResource("15_je5sl")
}, {
"duration": 1.0,
"texture": ExtResource("16_rkwhv")
}, {
"duration": 1.0,
"texture": ExtResource("17_cgiei")
}, {
"duration": 1.0,
"texture": ExtResource("18_vwnhj")
}],
"loop": false,
"name": &"Attack3",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_5dof7")
}, {
"duration": 1.0,
"texture": ExtResource("20_lakhe")
}, {
"duration": 1.0,
"texture": ExtResource("21_5mwa4")
}, {
"duration": 1.0,
"texture": ExtResource("22_u7xbo")
}],
"loop": true,
"name": &"Crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3uxma")
}, {
"duration": 1.0,
"texture": ExtResource("3_uavbk")
}, {
"duration": 1.0,
"texture": ExtResource("4_de10w")
}, {
"duration": 1.0,
"texture": ExtResource("5_blcbd")
}, {
"duration": 1.0,
"texture": ExtResource("6_pn1pn")
}, {
"duration": 1.0,
"texture": ExtResource("7_2dcv7")
}, {
"duration": 1.0,
"texture": ExtResource("8_sbbub")
}],
"loop": true,
"name": &"Die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_48wyr")
}, {
"duration": 1.0,
"texture": ExtResource("10_sl7s1")
}, {
"duration": 1.0,
"texture": ExtResource("11_b4rkc")
}],
"loop": true,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3s3pu")
}, {
"duration": 1.0,
"texture": ExtResource("2_3tkd6")
}, {
"duration": 1.0,
"texture": ExtResource("3_2wlot")
}, {
"duration": 1.0,
"texture": ExtResource("4_ddqeu")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("5_x2b25")
}, {
"duration": 1.0,
"texture": ExtResource("6_36uh8")
}, {
"duration": 1.0,
"texture": ExtResource("7_ujl5a")
}, {
"duration": 2.0,
"texture": ExtResource("8_obo03")
}, {
"duration": 2.0,
"texture": ExtResource("9_bh22j")
}, {
"duration": 1.0,
"texture": ExtResource("10_c6kjw")
}],
"loop": true,
"name": &"Jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_svpri")
}, {
"duration": 1.0,
"texture": ExtResource("10_r0sa8")
}, {
"duration": 1.0,
"texture": ExtResource("11_4es11")
}, {
"duration": 1.0,
"texture": ExtResource("12_1e83f")
}, {
"duration": 1.0,
"texture": ExtResource("13_gro2b")
}, {
"duration": 1.0,
"texture": ExtResource("14_nihew")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tagqt"]
size = Vector2(14, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hmu3l"]
size = Vector2(12, 30)

[node name="Character" type="CharacterBody2D" groups=["Character"]]
script = ExtResource("1_c1glt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6yv6x")
animation = &"Attack1"
autoplay = "Idle"
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_tagqt")

[node name="AttackArea" type="Area2D" parent="." groups=["Sword"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(18, -2)
shape = SubResource("RectangleShape2D_hmu3l")
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
